--- a/ansible/roles/cassandra-exporter-install/templates/cassandra_exporter.service.j2
+++ b/ansible/roles/cassandra-exporter-install/templates/cassandra_exporter.service.j2
@@ -3,8 +3,8 @@ Description=Cassandra Exporter
 After=cassandra.service
 
 [Service]
-PIDFile=/opt/cassandra/cassandra_exporter/cassandra_exporter.pid
-ExecStart=/bin/java -jar /opt/cassandra/cassandra_exporter-2.3.2-all.jar /opt/cassandra/cassandra_exporter-config.yml
+PIDFile=/run/cassandra_exporter.pid
+ExecStart=/bin/java -jar {{ tools_install_folder }}/cassandra_exporter-2.3.2-all.jar {{ tools_install_folder }}/cassandra_exporter-config.yml
 StandardOutput=journal
 StandardError=journal
 User=cassandra
