add dse env, install cassandra_exporter into its own folder, create jmx folder - missing for dse, install python2-pip - missing in dse

--- a/ansible/roles/cassandra-exporter-install/templates/cassandra_exporter.service.j2
+++ b/ansible/roles/cassandra-exporter-install/templates/cassandra_exporter.service.j2
@@ -4,7 +4,7 @@ After=cassandra.service
 
 [Service]
 PIDFile=/run/cassandra_exporter.pid
-ExecStart=/bin/java -jar {{ tools_install_folder }}/cassandra_exporter-2.3.2-all.jar {{ tools_install_folder }}/cassandra_exporter-config.yml
+ExecStart=/bin/java -jar {{ tools_install_folder }}/cassandra_exporter/cassandra_exporter-2.3.2-all.jar {{ tools_install_folder }}/cassandra_exporter/cassandra_exporter-config.yml
 StandardOutput=journal
 StandardError=journal
 User=cassandra
